Introudce a mode to unconditionally include classes