@@ -33,6 +33,7 @@ import java.io.InputStream;
 import java.lang.module.ModuleReader;
 import java.lang.module.ModuleReference;
 import java.lang.module.ResolvedModule;
+import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayDeque;
@@ -110,11 +111,12 @@ public class ClassLoaderSupportImpl extends ClassLoaderSupport {
 
         /* Collect remaining resources from classpath */
         for (Path classpathFile : classLoaderSupport.classpath()) {
+            boolean includeAll = classLoaderSupport.getJavaPathsToInclude().contains(classpathFile);
             try {
                 if (Files.isDirectory(classpathFile)) {
-                    scanDirectory(classpathFile, resourceCollector);
+                    scanDirectory(classpathFile, resourceCollector, includeAll);
                 } else if (ClasspathUtils.isJar(classpathFile)) {
-                    scanJar(classpathFile, resourceCollector);
+                    scanJar(classpathFile, resourceCollector, includeAll);
                 }
             } catch (IOException ex) {
                 throw UserError.abort("Unable to handle classpath element '%s'. Make sure that all classpath entries are either directories or valid jar files.", classpathFile);
@@ -122,12 +124,13 @@ public class ClassLoaderSupportImpl extends ClassLoaderSupport {
         }
     }
 
-    private static void collectResourceFromModule(ResourceCollector resourceCollector, ResourceLookupInfo info) {
+    private void collectResourceFromModule(ResourceCollector resourceCollector, ResourceLookupInfo info) {
         ModuleReference moduleReference = info.resolvedModule.reference();
         try (ModuleReader moduleReader = moduleReference.open()) {
+            var includeAll = classLoaderSupport.getJavaModuleNamesToInclude().contains(info.resolvedModule().name());
             List<String> foundResources = moduleReader.list()
-                            .filter(resourceName -> resourceCollector.isIncluded(info.module, resourceName, moduleReference.location().orElse(null)))
-                            .collect(Collectors.toList());
+                            .filter(resourceName -> shouldIncludeEntry(info.module(), resourceCollector, resourceName, moduleReference.location().orElse(null), includeAll))
+                            .toList();
 
             for (String resName : foundResources) {
                 if (resName.endsWith("/")) {
@@ -151,7 +154,7 @@ public class ClassLoaderSupportImpl extends ClassLoaderSupport {
         }
     }
 
-    private static void scanDirectory(Path root, ResourceCollector collector) {
+    private static void scanDirectory(Path root, ResourceCollector collector, boolean includeAll) {
         Map<String, List<String>> matchedDirectoryResources = new HashMap<>();
         Set<String> allEntries = new HashSet<>();
 
@@ -170,7 +173,7 @@ public class ClassLoaderSupportImpl extends ClassLoaderSupport {
             }
 
             if (Files.isDirectory(entry)) {
-                if (collector.isIncluded(null, relativeFilePath, Path.of(relativeFilePath).toUri())) {
+                if (shouldIncludeEntry(null, collector, relativeFilePath, Path.of(relativeFilePath).toUri(), includeAll)) {
                     matchedDirectoryResources.put(relativeFilePath, new ArrayList<>());
                 }
                 try (Stream<Path> pathStream = Files.list(entry)) {
@@ -183,7 +186,7 @@ public class ClassLoaderSupportImpl extends ClassLoaderSupport {
                     collector.registerIOException(null, relativeFilePath, resourceException, LinkAtBuildTimeSupport.singleton().packageOrClassAtBuildTime(relativeFilePath));
                 }
             } else {
-                if (collector.isIncluded(null, relativeFilePath, Path.of(relativeFilePath).toUri())) {
+                if (shouldIncludeEntry(null, collector, relativeFilePath, Path.of(relativeFilePath).toUri(), includeAll)) {
                     try (InputStream is = Files.newInputStream(entry)) {
                         collector.addResource(null, relativeFilePath, is, false);
                     } catch (IOException resourceException) {
@@ -210,19 +213,20 @@ public class ClassLoaderSupportImpl extends ClassLoaderSupport {
         });
     }
 
-    private static void scanJar(Path jarPath, ResourceCollector collector) throws IOException {
+    private static void scanJar(Path jarPath, ResourceCollector collector, boolean includeAll) throws IOException {
         try (JarFile jf = new JarFile(jarPath.toFile())) {
             Enumeration<JarEntry> entries = jf.entries();
             while (entries.hasMoreElements()) {
                 JarEntry entry = entries.nextElement();
+                URI uri = jarPath.toUri();
                 if (entry.isDirectory()) {
                     String dirName = entry.getName().substring(0, entry.getName().length() - 1);
-                    if (collector.isIncluded(null, dirName, jarPath.toUri())) {
+                    if (shouldIncludeEntry(null, collector, dirName, uri, includeAll)) {
                         // Register the directory with empty content to preserve Java behavior
                         collector.addDirectoryResource(null, dirName, "", true);
                     }
                 } else {
-                    if (collector.isIncluded(null, entry.getName(), jarPath.toUri())) {
+                    if (shouldIncludeEntry(null, collector, entry.getName(), uri, includeAll)) {
                         try (InputStream is = jf.getInputStream(entry)) {
                             collector.addResource(null, entry.getName(), is, true);
                         } catch (IOException resourceException) {
@@ -232,6 +236,11 @@ public class ClassLoaderSupportImpl extends ClassLoaderSupport {
                 }
             }
         }
+    }
+
+    private static boolean shouldIncludeEntry(Module module, ResourceCollector collector, String fileName, URI uri, boolean includeAll) {
+        var isIncluded = collector.isIncluded(module, fileName, uri);
+        return isIncluded || (includeAll && !(fileName.endsWith(".class") || fileName.endsWith(".jar")));
     }
 
     @Override
